tests/machine/x/swift/inner_join.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T15:38:06Z
struct Customer: Equatable {
    var id: Int
    var name: String
}

struct Order: Equatable {
    var customerId: Int
    var id: Int
    var total: Int
}

struct Result: Equatable {
    var customerName: String
    var orderId: Int
    var total: Int
}

var customers = [Customer(id: 1, name: "Alice"), Customer(id: 2, name: "Bob"), Customer(id: 3, name: "Charlie")]
var orders = [Order(customerId: 1, id: 100, total: 250), Order(customerId: 2, id: 101, total: 125), Order(customerId: 1, id: 102, total: 300), Order(customerId: 4, id: 103, total: 80)]
var result = ({
	var _res: [(customerName: String, orderId: Int, total: Int)] = []
	for o in orders {
		for c in customers {
			if !(o.customerId == c.id) { continue }
			_res.append(["orderId": o.id, "customerName": c.name, "total": o.total])
		}
	}
	return _res
}())
print("--- Orders with customer info ---")
for entry in result {
    print("Order", entry.orderId, "by", entry.customerName, "- $", entry.total)
}
